# fibonacci

./: .gitignore  README.md  pyproject.toml
fibonacci/: fibonacci.py
test/: test_fibonacci.py
