[tool.poetry]
name = "fibonacci"
version = "0.1.0"
description = ""
authors = ["Luiz Gabriel <luiz.gabriel.silva@alumni.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "1.25.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
flake8 = "6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
